opam-version: "2.0"

name: "ppx_syntext"
version: "0.1"

synopsis: "Generic syntax extension pre-processor"
description: """

Syntext provide a PPX rewriter that does all the generic stuff a syntax
extension pre-processor must do. Instead of replacing directly by the expression
that would be expected in this extension, it replaces them by functions. The
extension can then be written using only pure OCaml functions. For an extension
'foo' whose function are in module 'SyntextFoo', Syntext would replace

    if%foo e1 then e2 else e3

by

    SyntextFoo.if_then_else (fun () -> e1) (fun () -> e2) (fun () -> e3)

The behaviour of the if structure can then be defined purely in OCaml. For most
syntax extensions, the structures can be derived from an underlying monad.
Syntext thus provides a functor to produce these functions from only the bind
and return functions.
"""

maintainer: "Niols <niols@niols.fr>"
authors: "Niols <niols@niols.fr>"
license: "GPL3"
homepage: "https://github.com/LesBoloss-es/ppx_syntext"
bug-reports: "https://github.com/LesBoloss-es/ppx_syntext/issues"

build: ["dune" "build" "-p" name "-j" jobs]
