(library
 (name ppx_syntext)
 (public_name ppx_syntext)
 (synopsis "Generic syntax extension PPX")
 (modules ppx_syntext)
 (libraries syntext)
 (ppx_runtime_libraries syntext)
 (kind ppx_rewriter))

(library
 (name syntext)
 (public_name ppx_syntext.std)
 (modules :standard \ ppx_syntext)
 (libraries compiler-libs.common ocaml-migrate-parsetree ppx_tools_versioned)
 (preprocess (pps ppx_tools_versioned.metaquot_411)))
